GBL-21: Was added ability to select a folder when need save statistic

--- a/Bakalaurs/Bakalaurs/Form1.resx
+++ b/Bakalaurs/Bakalaurs/Form1.resx
@@ -202,4 +202,7 @@
         0WhcRpHvuqinbnGZMJgTCG7/C0cjK8H7gqf2BuN/I1H0E4cWynM7ODLYAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="selectFolder.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
